updating approach to fix text truncation

--- a/packages/@react-spectrum/table/src/table.css
+++ b/packages/@react-spectrum/table/src/table.css
@@ -19,17 +19,26 @@
 .react-spectrum-Table-cell {
   display: flex;
   align-items: center;
+  /* To ensure the flex child only takes up available width, see https://makandracards.com/makandra/66994-css-flex-and-min-width */
+  min-width: 0px;
 }
 
 .react-spectrum-Table-cellWrapper > .react-spectrum-Table-cell {
   height: 100%;
 }
 
+.react-spectrum-Table-cell--alignStart {
+  text-align: start;
+  justify-content: start;
+}
+
 .react-spectrum-Table-cell--alignCenter {
+  text-align: center;
   justify-content: center;
 }
 
 .react-spectrum-Table-cell--alignEnd {
+  text-align: end;
   justify-content: flex-end;
 }
 
